[package]
name = "yarl"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
native_db = "0.7"
native_model = "0.4"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
ron = "0.8"
log = "0.4"
home = "0.5"
# iced = "0.12"
