[package]
name = "yarl"
version = "0.2.1"
edition = "2021"
license = "GPL-3.0-only"
description = "A simple cli ledger written in rust for keepnig track of all your finances"
authors = [ "kalscium <kalscium@protonmail.com>" ]
repository = "https://github.com/kalscium/yarl"
keywords = [ "cli", "ledger", "simple", "finance", "banking" ]
categories = [ "command-line-utilities", "finance" ]

[dependencies]
native_db = "0.7"
native_model = "0.4"
clap = { version = "4.5", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = "1.0"
ron = "0.8"
log = "0.4"
home = "0.5"
# iced = "0.12"
